<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_name">Canberra is the capital of Australia</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="question1">What?</string>
    <string name="question2">Why?</string>
    <string name="question3">How?</string>
    <string name="question4">Who?</string>
    <string name="question5">Which?</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

</resources>
