<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.dzy.geoquiz.QuizActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/question_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="380dp"
        android:text="@string/false_button"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/false_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="300dp"
        app:layout_constraintVertical_bias="0.526" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="246dp"
        app:layout_constraintBottom_toBottomOf="@+id/false_button"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/next_button"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/true_button"
        android:layout_marginRight="84dp" />

    <Button
        android:id="@+id/pre_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PREV"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/false_button"
        android:layout_marginLeft="85dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="203dp"
        app:layout_constraintTop_toBottomOf="@+id/question_text_view" />

</android.support.constraint.ConstraintLayout>
